Revert "Fix nav menu on mobile"
This reverts commit f05ab6be287cb2af8c7836d76c94347b8dc49cca.

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -210,7 +210,7 @@ html {
   box-sizing: inherit;
 }
 
-.index {
+body {
   background: _palette(bg);
 
   // Stops initial animations until page loads.
@@ -1202,7 +1202,7 @@ button,
   }
 }
 
-.index #main {
+body.index #main {
   padding-top: 5em;
 }
 
@@ -1570,7 +1570,7 @@ button,
     }
   }
 
-  .index #main {
+  body.index #main {
     padding-top: 4.5em;
   }
 
@@ -1703,7 +1703,7 @@ button,
     }
   }
 
-  .index {
+  body {
     &.navPanel-visible {
       #page-wrapper {
         @include vendor('transform', 'translateX(#{_size(navPanel)})');
@@ -1890,11 +1890,11 @@ button,
     padding: 3.5em 0 2.5em 0;
   }
 
-  .index #main {
+  body.index #main {
     padding: 2.5em 0 0 0;
   }
 
-  .contact #main {
+  body.contact #main {
     padding-bottom: 0;
   }
 
